2. mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: blog
spec:
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql-db
        image: mysql:5.7
        environment:
        - MYSQL_ROOT_PASSWORD=admin
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: sql-data
      volumes:
      - hostPath:
          path: /root/mysql
        name: sql-data
