3. myWeb.yaml
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: blog-dep
  namespace: blog
  labels:
    app: blog-dep
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
      - name: web-c
        image: registry.cn-shenzhen.aliyuncs.com/dtango/blog-web:prod
        imagePullPolicy: Always
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: aliyun-docker
