4. ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dtango.gz2vip.idcfengye.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 80
